--- a/src/Header.css
+++ b/src/Header.css
@@ -14,10 +14,10 @@
   height: 100px;
 }
 
-.header__right > button {
+/* .header__right > button {
   padding: 10px;
   margin: 10px;
-}
+} */
 
 @media (max-width: 425px) {
   .header__right {
